code to fix fixed background on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #e45454;
-    background: url("../assets/images/background95663.jpg") no-repeat center fixed;
+    background: url("../assets/images/background95663.jpg") no-repeat center center fixed;
     background-size: cover;
     font-family: "Cairo", sans-serif;
 
@@ -19,6 +19,24 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+}
+
+body:after {
+    content: "";
+    position: fixed;
+    /* stretch a fixed position to the whole screen */
+    top: 0;
+    height: 100vh;
+    /* fix for mobile browser address bar appearing disappearing */
+    left: 0;
+    right: 0;
+    z-index: -1;
+    /* needed to keep in the background */
+/*    background: url("../assets/images/background95663.jpg") center center;*/
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 /* Color Schemes - reusable colour schemes for pages and containers*/
